Deploying as asp.net 2.2

--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -5,14 +5,34 @@
     <span class="far fa-newspaper"></span>
     @ViewData["Title"]
 </h3>
+
+<h3>
+    October 13th, 2019 Update
+</h3>
+<h5>Release Notes</h5>
+<em>Exports</em>
+<p>
+    Series can now be exported to a stand-alone html page or comma separated file (.csv). Look
+    for the buttons in the lower right below a series results.
+</p>
+<em>Create and Merge Competitors</em>
+<p>
+    Competitors can now be created while entering a race's results. And if you later discover
+    that an racer already existed in the club, the two competitors can be merged.
+</p>
+<em>Admin tips</em>
+<p>
+    Guidance for newly setup clubs is now provided as on-page tips suggesting activities
+    that should be completed for race scoring.
+</p>
 <h3>
     October 13th, 2019 Update
 </h3>
 <h5>Release Notes</h5>
 <em>Series Charts</em>
-    <p>
-        Series with more than one race can show a chart with the trend of competitors' rankings.
-    </p>
+<p>
+    Series with more than one race can show a chart with the trend of competitors' rankings.
+</p>
 <h3>
     Spetember 3rd, 2019 Update
 </h3>
