Club Request page and processing

--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -11,9 +11,10 @@
     in many ways from many devices, and see trends and specifics.
 </p>
 <br />
-<h3>You can use it</h3>
+<h3>You can use it for free</h3>
 <p>
-    You can host your club's scores on this site. Contact us for the initial club setup.
+    You can host your club's scores on this site. Fill out <a asp-controller="ClubRequest" asp-action="index">the form</a>
+    for the initial club setup. There's no cost.
 </p>
 <p>
     If you'd rather provide your own servers, SailScores is open-source software. The
@@ -25,7 +26,7 @@
 <br />
 <h3>Free? Really free?</h3>
 <p>
-    <i>Why is SailScores free? What's the catch? What about "If you're not paying for the product, you are the product."?</i>
+    <i>Why is SailScores free? What's the catch? What about "If you're not paying for a service, you are the product."?</i>
 </p>
 <p>
     The expense to host this site is less than $20 a month.
@@ -33,10 +34,10 @@
     score entry troubles are reduced, the growth of sailing is supported and technologies are learned.
 </p>
 <p>
-    As we build more advanced features are added, or as the site becomes
-    popular, it may not fit onto the current inexpensive hosting option. We might
-    need to pay for better servers. So maybe we start charging for premium features
-    or build a client app that requires purchase.
+    If there is a catch, it might be this: as we build more advanced features, or as the site becomes
+    popular, it might not fit into the current inexpensive hosting option. We might need to come up with
+    payments for a better server option. That could be done with an option to pay for premium features
+    or a SailScores phone app might require purchase.
 </p>
 <p>
     But we remain committed to providing a free option. The sailing clubs we've participated
