--- a/SailScores.Web/Views/Shared/_Layout.cshtml
+++ b/SailScores.Web/Views/Shared/_Layout.cshtml
@@ -47,6 +47,7 @@
             <ul class="navbar-nav flex-row">
                 <li class="nav-item"><a asp-area="" asp-controller="Home" asp-action="About" class="nav-link">About</a></li>
                 <li class="nav-item"><a asp-area="" asp-controller="Home" asp-action="News" class="nav-link">News</a></li>
+                <li class="nav-item"><a asp-area="" asp-controller="ClubRequest" asp-action="Index" class="nav-link">Try it out</a></li>
             </ul>
         </div>
     </header>
