--- a/SailScores.Web/Views/_ViewImports.cshtml
+++ b/SailScores.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SailScores.Web
 @using SailScores.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, SailScores.Web
