--- a/SailScores.Web/Views/Competitor/CreateMultiple.cshtml
+++ b/SailScores.Web/Views/Competitor/CreateMultiple.cshtml
@@ -30,7 +30,7 @@
                 <span asp-validation-for="BoatClassId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FleetIds" class="control-label">Fleets <span class="small muted"><i>Optional</i>If in doubt, leave empty.</span></label>
+                <label asp-for="FleetIds" class="control-label">Fleets <span class="small muted"><i>Optional</i> If in doubt, leave empty.</span></label>
                 <select id="seriesIds" asp-for="FleetIds" class="form-control selectpicker" multiple>
                     @foreach (var fleet in Model.FleetOptions)
                     {
@@ -66,11 +66,10 @@
                     </div>
                     <div class="col-md-3">
                         <div class="form-group">
-                            Home Club <i>Optional - for regattas</i>
+                            Home Club <span class="small muted"><i>Optional - for regattas</i></span>
                         </div>
                     </div>
                     <div class="col-1">
-
                     </div>
                 </div>
                 <div class="row" id="compRowTemplate" style="display: none">
