WIP: Almost there
Need to move js to own file

--- a/SailScores.Web/Views/Admin/_CompetitorList.cshtml
+++ b/SailScores.Web/Views/Admin/_CompetitorList.cshtml
@@ -11,12 +11,17 @@
     <div id="collapseCompetitors" class="collapse" aria-labelledby="competitorsHeading" data-parent="#accordion">
         <div class="card-body">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-3">
                     <a class="btn btn-primary" asp-action="Create" asp-controller="Competitor">
-                        Create
+                        Create One
                     </a>
                 </div>
                 <div class="col-sm-6">
+                    <a class="btn btn-primary" asp-action="CreateMultiple" asp-controller="Competitor">
+                        Create A Few
+                    </a>
+                </div>
+                <div class="col-sm-3">
                     <a class="btn btn-warning" asp-action="Options" asp-controller="MergeCompetitor">
                         Merge Competitors
                     </a>
