--- a/SailScores.Web/Views/Admin/_CompetitorList.cshtml
+++ b/SailScores.Web/Views/Admin/_CompetitorList.cshtml
@@ -11,14 +11,9 @@
     <div id="collapseCompetitors" class="collapse" aria-labelledby="competitorsHeading" data-parent="#accordion">
         <div class="card-body">
             <div class="row">
-                <div class="col-sm-3">
-                    <a class="btn btn-primary" asp-action="Create" asp-controller="Competitor">
-                        Create One
-                    </a>
-                </div>
                 <div class="col-sm-6">
                     <a class="btn btn-primary" asp-action="CreateMultiple" asp-controller="Competitor">
-                        Create A Few
+                        Create
                     </a>
                 </div>
                 <div class="col-sm-3">
