--- a/SailScores.Web/Views/Competitor/CreateMultiple.cshtml
+++ b/SailScores.Web/Views/Competitor/CreateMultiple.cshtml
@@ -95,6 +95,40 @@
                             </div>
                         </div>
                     </div>
+                    @if (Model.Competitors != null && Model.Competitors.Count > 0)
+                    {
+                        for (int i = 0; i < Model.Competitors.Count; i++)
+                        {
+                            <div class="row competitor-row">
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <input type="text" name="competitors[0].SailNumber" class="form-control"
+                                               data-column="0" data-row="@i" value="@Model.Competitors[i].SailNumber"/>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <input type="text" name="competitors[0].Name" class="form-control"
+                                               data-column="1" data-row="@i" value="@Model.Competitors[i].Name"/>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <input type="text" name="competitors[0].BoatName" class="form-control"
+                                               data-column="2" data-row="@i" value="@Model.Competitors[i].BoatName"/>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <input type="text" name="competitors[0].HomeClubName" class="form-control"
+                                               data-column="3" data-row="@i" value="@Model.Competitors[i].HomeClubName"/>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                    }
+                    else
+                    {
                     <div class="row competitor-row">
                         <div class="col-md-3">
                             <div class="form-group">
@@ -104,23 +138,24 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <input type="text" name="competitors[0].Name" class="form-control" 
+                                <input type="text" name="competitors[0].Name" class="form-control"
                                        data-column="1" data-row="0" />
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <input type="text" name="competitors[0].BoatName" class="form-control" 
+                                <input type="text" name="competitors[0].BoatName" class="form-control"
                                        data-column="2" data-row="0" />
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <input type="text" name="competitors[0].HomeClubName" class="form-control" 
+                                <input type="text" name="competitors[0].HomeClubName" class="form-control"
                                        data-column="3" data-row="0" />
                             </div>
                         </div>
                     </div>
+                    }
                 </div>
                 <button class="btn btn-light" type="button"
                         onclick="addNewRow()">
@@ -141,97 +176,7 @@
 </div>
 
 @section Scripts {
-    <script type="text/javascript">
-        (function () {
-            var allCompDiv = document.getElementsByName("competitors[0].Name")[0];
-            allCompDiv = document.getElementById('allCompetitors');
-            allCompDiv.onpaste = function (event) {
-
-                var clipText = event.clipboardData.getData('text/plain')
-                var clipRows = clipText.split(String.fromCharCode(13));
-                for (var i=0; i<clipRows.length; i++) {
-                    clipRows[i] = clipRows[i].split(String.fromCharCode(9));
-                }
-                if (clipRows.length === 1 && clipRows[0].length === 1) {
-                    return;
-                }
-                               
-                event.preventDefault();
-                //get starting position:
-                var startColumn = Number(event.target.dataset.column) || 0;
-                var startRow = Number(event.target.dataset.row) || 0;
-
-                // paste the array:
-                for (var i = 0; i < clipRows.length; i++) {
-                    for (var j = 0; j < clipRows[i].length; j++) {
-                        if (startColumn + j < 4) {
-                            getInputAtRowColumn(startRow + i, startColumn + j).value = clipRows[i][j];
-                        }
-                    }
-                }
-
-                event.stopPropagation();
-                event.preventDefault();
-            };
-        })();
-
-        function getInputAtRowColumn(row, column) {
-            var allCompDiv = document.getElementById("allCompetitors");
-            var rowSelector = "[data-row=\"" + row + "\"]";
-            var rowArray = document.querySelectorAll(rowSelector);
-            if (!rowArray || rowArray.length === 0 ) {
-                if (allCompDiv.querySelectorAll(".row").length > 102) {
-                    alert("Only 100 competitors can be added at a time.");
-                    throw ("Too many rows added.");
-                }
-                addNewRow();
-                return getInputAtRowColumn(row, column);
-            }
-            var elementSelector = rowSelector + "[data-column=\"" + column + "\"]";
-            var elementArray = document.querySelectorAll(elementSelector);
-            if (!elementArray || elementArray.length < 1) {
-                    throw ("Problem finding input.");
-            }
-            return elementArray[0];
-        }
-        function addNewRow() {
-            var rowIndex = 0;
-            var allCompDiv = document.getElementById("allCompetitors");
-            var compTemplate = document.getElementById("compRowTemplate");
-
-            var compListItem = (compTemplate.cloneNode(true));
-
-            //subtract two, don't count template or header row
-            rowIndex = allCompDiv.querySelectorAll(".row").length - 2;
-            if (rowIndex < 0) rowIndex = 0;
-            var namePrefix = "competitors[" + rowIndex + "].";
-
-            var sail = compListItem.querySelectorAll('input[name="template.SailNumber"]')[0];
-            sail.name = namePrefix + "SailNumber";
-            sail.dataset.column = 0;
-            sail.dataset.row = rowIndex;
-
-            var name = compListItem.querySelectorAll('input[name="template.Name"]')[0];
-            name.name = namePrefix + "Name";
-            name.dataset.column = 1;
-            name.dataset.row = rowIndex;
-
-            var boat = compListItem.querySelectorAll('input[name="template.BoatName"]')[0];
-            boat.name = namePrefix + "BoatName";
-            boat.dataset.column = 2;
-            boat.dataset.row = rowIndex;
-
-            var club = compListItem.querySelectorAll('input[name="template.HomeClubName"]')[0];
-            club.name = namePrefix + "HomeClubName";
-            club.dataset.column = 3;
-            club.dataset.row = rowIndex;
-
-            compListItem.style.display = "";
-            allCompDiv.appendChild(compListItem);
-
-            sail.focus();
-        }
-
+    <script type="text/javascript" src="~/js/createMultipleComp.js">
     </script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/vendor/bootstrap-select/js/bootstrap-select.min.js"></script>
