Add asterisks to required field
Particularly tested on clubrequest

--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -5,11 +5,31 @@
     <span class="far fa-newspaper"></span>
     @ViewData["Title"]
 </h3>
-
 <h3>
-    October 13th, 2019 Update
+    November 26th, 2019
 </h3>
-<h5>Release Notes</h5>
+<h5>New Features</h5>
+<em>Faster creation of multiple competitors.</em>
+<p>
+    The page to create competitors now can create multiple competitors at once, and can handle
+    competitors pasted from a spreadsheet such as Google Sheets or Microsoft Excel.
+</p>
+<em>Club request page</em>
+<p>
+    We're working on speeding up the process of
+    <a asp-controller="ClubRequest" asp-action="Index">creating a new club.</a> Requests still
+    need to be approved by a person, but the form now gives a better idea of what information
+    is needed to initially set up the club.
+</p>
+<em>Admin tips</em>
+<p>
+    Guidance for newly setup clubs is now provided as on-page tips suggesting activities
+    that should be completed for race scoring.
+</p>
+<h3>
+    November 19th, 2019
+</h3>
+<h5>New Features</h5>
 <em>Exports</em>
 <p>
     Series can now be exported to a stand-alone html page or comma separated file (.csv). Look
@@ -26,17 +46,17 @@
     that should be completed for race scoring.
 </p>
 <h3>
-    October 13th, 2019 Update
+    October 13th, 2019
 </h3>
-<h5>Release Notes</h5>
+<h5>New Features</h5>
 <em>Series Charts</em>
 <p>
     Series with more than one race can show a chart with the trend of competitors' rankings.
 </p>
 <h3>
-    Spetember 3rd, 2019 Update
+    Spetember 3rd, 2019
 </h3>
-<h5>Release Notes</h5>
+<h5>New Features</h5>
 <p>
     Regatta support: a regatta is featured on the front page for a week before and after the event, and
     is highlighted on the club home page for three weeks before and after the event.
@@ -47,18 +67,18 @@
 </p>
 
 <h3>
-    August 16th, 2019 Update
+    August 16th, 2019
 </h3>
-<h5>Release Notes</h5>
+<h5>New Features</h5>
 <p>
     Series can include a column with changes in competitors' rankings.
 </p><p>
     Historical series can lock results, so that changes in the scoring system or the races will no longer change the series.
 </p>
 <h3>
-    August 10th, 2019 Update
+    August 10th, 2019
 </h3>
-<h5>Release Notes</h5>
+<h5>New Features</h5>
 <p>
     Custom Scoring systems are now working.
     <ul>
@@ -79,28 +99,10 @@
     Also some enhancements have been made to support long series: helm name is now
     shown every 25 races and as the last column of the results.
 </p>
-<h5>Coming soon</h5>
-<p>
-    The next big feature on the way will be support for regattas: We are aiming
-    to have this done in time to use SailScores for the LHYC fall Die Hard Regatta.
-</p>
-<p>
-    Some other small enhancments on the way:
-    <ul>
-        <li>
-            Indication if a skipper's ranking has
-            gone up or down in the recent past with a trend indicator.
-        </li>
-        <li>
-            Localization support: clubs can have a defined locale that will control
-            display of dates and keywords can be translated.
-        </li>
-    </ul>
-</p>
 <h3>
     June 7th, 2019 Update
 </h3>
-<h5>Release Notes</h5>
+<h5>New Features</h5>
 <p>
     Enhancements to the race editing page are getting rolled out today:
     <ul>
@@ -127,15 +129,9 @@
 </p>
 <h5>Other News</h5>
 <p>
-    We're trying to consolidate our issues lists with the SailScores code at
+    We've consolidated our issues list with the SailScores code at
     <a href="https://github.com/jbfraser1/SailScores/issues" target="_blank">GitHub.</a> Some
     of the issues have a "Help wanted" tag, where we'd love to hear more input from potential users.
-</p>
-<p>
-    The big effort of making the scoring systems customizable through a user interface has started.
-    Initially this will focus on supporting low-point scoring, and allowing for customizable
-    discard patterns and score code values, but still making sure a single race can be used in
-    multiple series.
 </p>
 <br />
 <h3>
