--- a/SailScores.Web/custom.scss
+++ b/SailScores.Web/custom.scss
@@ -136,3 +136,11 @@ svg text {
     bottom: 0;
 }
 
+label.required:not(.custom-control-label)::after {
+    content: "*";
+    position: relative;
+    font-size: 150%;
+    top: .1em;
+    padding-left: .4rem;
+    color: theme-color('danger');
+}
