--- a/SailScores.Web/Views/ClubRequest/Index.cshtml
+++ b/SailScores.Web/Views/ClubRequest/Index.cshtml
@@ -11,9 +11,10 @@
 <div class="row">
     <div class="col-12">
         <p>
-            Fill out the form and, after review, we'll create a hidden test club
+            Fill out the form and we'll create a test club
             for you. If you like how things are working, we can copy the competitors
-            and settings to a visible club, or you can start with a clean slate.
+            and settings to a club visible on the front page, or you can start
+            with a clean slate.
         </p>
         <p>
             Inactive clubs will be archived and removed from the site
@@ -105,8 +106,12 @@
                         <span asp-validation-for="Comments" class="text-danger"></span>
                     </div>
                 </div>
-                <div class="form-group">
-                    <input type="submit" value="Submit" class="btn btn-primary" />
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="form-group">
+                        <input type="submit" value="Submit" class="btn btn-primary" />
+                    </div>
                 </div>
             </div>
         </form>
