--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -3,7 +3,7 @@
 }
 
 
-<h3>Sailing scoring kept simple.</h3>
+<h2>Sailing scoring kept simple.</h2>
 <p>
     SailScores makes publishing sail race results simple and
     fast: simple enough that the scores can be entered and shared
@@ -11,22 +11,22 @@
     in many ways from many devices, and see trends and specifics.
 </p>
 <br />
-<h3>You can use it for free</h3>
+<h3>It's free</h3>
 <p>
     You can host your club's scores on this site. Fill out <a asp-controller="ClubRequest" asp-action="index">the form</a>
-    for the initial club setup. There's no cost.
+    for the initial club setup.
 </p>
 <p>
     If you'd rather provide your own servers, SailScores is open-source software. The
     code is available at
     <a href="https://github.com/jbfraser1/SailScores">https://github.com/jbfraser1/SailScores</a>.
-    You are welcome to run your own instance of this. I'll provide
+    You are welcome to run your own instance of this. We'll provide
     support as time allows.
 </p>
 <br />
-<h3>Free? Really free?</h3>
+<h4>What's the catch?</h4>
 <p>
-    <i>Why is SailScores free? What's the catch? What about "If you're not paying for a service, you are the product."?</i>
+    <i>Why is SailScores free? What about "If you're not paying for a service, you are the product."?</i>
 </p>
 <p>
     The expense to host this site is less than $20 a month.
@@ -34,14 +34,14 @@
     score entry troubles are reduced, the growth of sailing is supported and technologies are learned.
 </p>
 <p>
-    If there is a catch, it might be this: as we build more advanced features, or as the site becomes
-    popular, it might not fit into the current inexpensive hosting option. We might need to come up with
-    payments for a better server option. That could be done with an option to pay for premium features
-    or a SailScores phone app might require purchase.
+    Some features may require more resources or payment to other services (such as
+    speech recognition or automatic weather recording.) When those are ready we'll find a way
+    to only charge the users of the "Premium" features.
 </p>
 <p>
-    But we remain committed to providing a free option. The sailing clubs we've participated
-    in haven't had large budgets and would have benefitted from SailScores.
+    We are committed to providing a free option regardless. Our clubs
+    haven't had large budgets and would have benefitted from SailScores. We'd
+    like to share.
 </p>
 <p>
     By the way, SailScores doesn't use any tracking or cookies except the minimum required to track logged-in users. Your
@@ -53,7 +53,7 @@ We're working on new features, including:
 <ul>
     <li>Integration with social media, such as automatic posting of results to Twitter.</li>
     <li>Fields to track race conditions, with analysis for competitors in different conditions.</li>
-    <li>Import and Export to integrate with existing scoring software.</li>
+    <li>More import and export options to integrate with existing scoring software.</li>
     <li>Deeper trend reporting for clubs: Are your races growing year orver year?</li>
     <li>More options for result entry: let's keep making result entry simpler and faster. We've got even more ideas for this...</li>
 </ul>
@@ -61,7 +61,7 @@ We're working on new features, including:
 <br />
 <h3>Feedback</h3>
 <p>
-    Please send feedback! Use the email addresses below, reach out on Twitter @@SailScores or via Github.
+    <em>Please send feedback!</em> Use the email addresses below, reach out on Twitter @@SailScores or via Github.
 </p>
 
 <br />
