--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -38,7 +38,7 @@
 <em>Create and Merge Competitors</em>
 <p>
     Competitors can now be created while entering a race's results. And if you later discover
-    that an racer already existed in the club, the two competitors can be merged.
+    that a racer already existed in the club, the two competitors can be merged.
 </p>
 <em>Admin tips</em>
 <p>
@@ -54,7 +54,7 @@
     Series with more than one race can show a chart with the trend of competitors' rankings.
 </p>
 <h3>
-    Spetember 3rd, 2019
+    September 3rd, 2019
 </h3>
 <h5>New Features</h5>
 <p>
