--- a/SailScores.Web/Views/Club/Index.cshtml
+++ b/SailScores.Web/Views/Club/Index.cshtml
@@ -182,7 +182,7 @@
         </div>
         <div class="col-sm-3 my-2">
             <a asp-controller="Competitor"
-               asp-action="Create"
+               asp-action="CreateMultiple"
                asp-route-returnUrl="@Context.Request.GetEncodedUrl()"
                class="btn btn-outline-primary">@localizer["New Competitor"]</a>
         </div>
