--- a/SailScores.Web/custom.scss
+++ b/SailScores.Web/custom.scss
@@ -136,7 +136,7 @@ svg text {
     bottom: 0;
 }
 
-label.required:not(.custom-control-label)::after {
+form label.required:not(.custom-control-label)::after {
     content: "*";
     position: relative;
     font-size: 150%;
