--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -147,14 +147,11 @@
                     <input id="newCompetitor" type="text" class="form-control" />
                 </div>
             </div>
-            <div class="col-lg-2"></div>
-            <div class="col-lg-3">
-                <div class="form-group bottom-column">
-                    <div class="form-group bottom-column">
-                        <div class="">
-                            <input id="createCompButton" type="button" value="Create New Competitor" class="btn btn-outline-primary btn-block" data-toggle="modal" data-target="#createCompetitor" />
-                        </div>
-                    </div>
+            <div class="d-none d-lg-inline-block col-lg-2"></div>
+            <div class="col-12 col-lg-3">
+                <div class="form-group">
+                    <label class="d-none d-lg-inline h4">&nbsp;</label>
+                    <input id="createCompButton" type="button" value="Create New Competitor" class="btn btn-outline-primary btn-block" data-toggle="modal" data-target="#createCompetitor" />
                 </div>
             </div>
         </div>
