--- a/SailScores.Web/custom.scss
+++ b/SailScores.Web/custom.scss
@@ -107,8 +107,7 @@ body {
 .score-entry {
     position: fixed;
     margin-left: -15px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    padding-bottom: 10px;
     bottom: 0;
     width: 100%;
     height: auto;
